@@ -4,3 +4,5 @@ SUBDIRS = common Elak Ensonic FSM Jeskola Matilde
 
 ACLOCAL_AMFLAGS = -I m4
 
+CONFIG_CLEAN_FILES = shave·shave-libtool
+
