@@ -1,3 +1,13 @@
+2009-02-25  Stefan Kost  <ensonic@users.sf.net>
+
+	* Makefile.am:
+	* autogen.sh:
+	* common/dsplib.h:
+	* m4/shave.m4:
+	* shave-libtool.in:
+	* shave.in:
+	  Update shave.
+
 2009-02-20  Stefan Kost  <ensonic@users.sf.net>
 
 	* configure.ac:
